Add 4 variable memorycard game, 2 files were modified

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -26,8 +26,8 @@
   
   	<footer>
   		Created with &hearts; by <span class="name">GA</span>
-	</footer>
-
+		</footer>
+		<script src="main.js"></script>
      </body>
 
 
